--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,115 @@
 * {
 	box-sizing: border-box;
-	/* transition: all .4s ease-in-out; */
 }
 html {
 	font-size: 10px;
 }
+body {
+	background: #eee;
+}
+.gl__conteiner {
+	position:absolute;
+	width:80vmin;
+	height:80vmin;
+	margin: auto;
+	border:20px solid #fff;
+	top:0;
+	left:0;
+	right:0;
+	bottom:0;
+}
+.conteiner {
+	position:relative;
+	width:100%;
+	height:100%;
+	margin: auto;
+	top:0;
+	left:0;
+	right:0;
+	bottom:0;
+	border:3px solid red;
+	background:  #efc5ca;
+}
+.chess {
+	position: absolute;
+	width: 12.5%;
+	height: 12.5%;
+	text-align: center;
+}
+img {
+	width: 100%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%)
+	}
+.chess:nth-of-type(2n+1) {
+	background: linear-gradient(to top left, rgb(239,197,202) 0%,rgb(210,75,90) 50%,rgb(186,39,55) 51%,rgb(241,142,153) 100%);
+
+}
+.chess:nth-of-type(2n) {
+	background: linear-gradient(to top left, rgb(239,197,202) 0%,rgb(210,75,90) 50%,rgb(186,39,55) 51%,rgb(241,142,153) 100%);
+
+}
+
+.top-1 {
+	top:12.5%;
+}
+.top-2 {
+	top:25%;
+}
+.left-2 {
+	left:12.5%;
+}
+.top-3 {
+	top:37.5%;
+}
+.left-3 {
+	left:25%;
+}
+.top-4 {
+	top:50%;
+}
+.left-4 {
+	left:37.5%;
+}
+.top-5 {
+	top:62.5%;
+}
+.left-5 {
+	left:50%;
+}
+.top-6 {
+	top:75%;
+}
+.left-6 {
+	left:62.5%;
+}
+.top-7 {
+	top:87.5%;
+}
+.left-7 {
+	left:75%;
+}
+.left-8 {
+	left:87.5%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* 
 .conteiner {
 	position: relative;
 	margin: 0 auto;
@@ -20,12 +125,12 @@ html {
 
 .chess:nth-of-type(2n+1) {
 	background: #efc5ca;
-    background: linear-gradient(to top left, rgb(239,197,202) 0%,rgb(210,75,90) 50%,rgb(186,39,55) 51%,rgb(241,142,153) 100%);
+	background: linear-gradient(to top left, rgb(239,197,202) 0%,rgb(210,75,90) 50%,rgb(186,39,55) 51%,rgb(241,142,153) 100%);
 
 }
 .chess:nth-of-type(2n) {
 	background: #efc5ca;
-    background: linear-gradient(to top left, rgb(239,197,202) 0%,rgb(210,75,90) 50%,rgb(186,39,55) 51%,rgb(241,142,153) 100%);
+	background: linear-gradient(to top left, rgb(239,197,202) 0%,rgb(210,75,90) 50%,rgb(186,39,55) 51%,rgb(241,142,153) 100%);
 
 }
 .top-1 {
@@ -81,4 +186,4 @@ html {
 }
 .left-9 {
 	left:900px;
-}
+} */
